feat: add judge for script directory

--- a/test/html/animate.html
+++ b/test/html/animate.html
@@ -11,7 +11,7 @@
 </head>
 <body ng-app="myApp">
 <div class="container" ng-controller="myCtrl">
-    <h1>aaa</h1>
+    <h1>hahhaha</h1>
     <table class="table table-bordered">
         <tr>
             <th width="50px">序号</th>
